Revert "Fix: change background blur positioning to fixed to prevent empty bottom spacing"
This reverts commit 0316d36bc31bcf0cd8b39033d0944ccccd982ab2.

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body {
 
 /* Background Blur Decorations */
 .bg-blur {
-  position: fixed;
+  position: absolute;
   width: 500px;
   height: 500px;
   border-radius: 50%;
